--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ToDo List</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 <div class="menu">
 	<h1>Todo List</h1>
 	<ul class="menu-list">
@@ -34,3 +44,5 @@
 		<p>Hello World!</p>
 	</div>
 </div>
+	</body>
+</html>
